[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/HTTPRequest.gd" type="Script" id=1]
[ext_resource path="res://Scripts/ShowData.gd" type="Script" id=2]
[ext_resource path="res://godwaita/theme.tres" type="Theme" id=3]
[ext_resource path="res://godwaita/gtk-colors.gd" type="Script" id=4]
[ext_resource path="res://images/cloud.svg" type="Texture" id=5]
[ext_resource path="res://addons/graph_2d/graph_2d.gd" type="Script" id=6]
[ext_resource path="res://Prefabs/fontdesho.tres" type="Theme" id=7]

[node name="NodeBase" type="Spatial"]
script = ExtResource( 2 )
emoji = ExtResource( 5 )
tgtpos = Vector3( 16.665, -0.821, -4.937 )
tgtrot = Vector3( 0, 116.834, 0 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]
script = ExtResource( 1 )

[node name="CSGSphere" type="CSGSphere" parent="."]
transform = Transform( 0.207487, 0, 0, 0, 0.207487, 0, 0, 0, 0.207487, 0, 0, 0 )
visible = false

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
theme_type_variation = "dark"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="logo" type="Sprite" parent="Control"]
modulate = Color( 1, 1, 1, 0.196078 )
scale = Vector2( 0.444444, 0.444444 )
z_index = -10
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Control/logo"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -81.0
margin_right = 184.0
margin_bottom = -55.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "WN-PACCHU"
align = 1

[node name="Panel" type="PanelContainer" parent="Control/logo"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -344.25
margin_top = -234.0
margin_right = -124.25
margin_bottom = 162.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/logo/Panel"]
margin_left = 14.0
margin_top = 7.0
margin_right = 206.0
margin_bottom = 389.0

[node name="Status" type="HBoxContainer" parent="Control/logo/Panel/VBoxContainer"]
margin_right = 192.0
margin_bottom = 17.0
alignment = 1

[node name="Label" type="Label" parent="Control/logo/Panel/VBoxContainer/Status"]
margin_left = 49.0
margin_right = 86.0
margin_bottom = 17.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Status"

[node name="status" type="Label" parent="Control/logo/Panel/VBoxContainer/Status"]
margin_left = 90.0
margin_right = 143.0
margin_bottom = 17.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Loading..."

[node name="LastEpoch" type="HBoxContainer" parent="Control/logo/Panel/VBoxContainer"]
visible = false
margin_top = 21.0
margin_right = 192.0
margin_bottom = 38.0
alignment = 1

[node name="Label" type="Label" parent="Control/logo/Panel/VBoxContainer/LastEpoch"]
margin_left = 43.0
margin_right = 117.0
margin_bottom = 17.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Last Updated"

[node name="status" type="Label" parent="Control/logo/Panel/VBoxContainer/LastEpoch"]
margin_left = 121.0
margin_right = 148.0
margin_bottom = 17.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Now"

[node name="Tree" type="Tree" parent="Control/logo/Panel/VBoxContainer"]
margin_top = 21.0
margin_right = 192.0
margin_bottom = 382.0
rect_min_size = Vector2( 192, 300 )
mouse_filter = 2
size_flags_vertical = 3
__meta__ = {
"_editor_description_": "ola"
}

[node name="WindowDialog" type="WindowDialog" parent="Control"]
margin_left = 24.0
margin_top = 78.0
margin_right = 444.0
margin_bottom = 466.0
rect_min_size = Vector2( 300, 240 )
window_title = "Node Name"
resizable = true

[node name="RichTextLabel" type="RichTextLabel" parent="Control/WindowDialog"]
anchor_top = 0.0154642
anchor_right = 1.0
anchor_bottom = 0.876289
rect_min_size = Vector2( 0, 35.785 )
mouse_filter = 1
text = "Epoch :"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Graph2D" type="Control" parent="Control/WindowDialog"]
visible = false
anchor_left = 0.0714286
anchor_right = 1.0
anchor_bottom = 0.773196
grow_vertical = 0
rect_clip_content = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": true
}
background_color = Color( 0.133333, 0.133333, 0.133333, 1 )
x_axis_min_value = 0.0
x_axis_max_value = 30.0
x_axis_grad_number = 11
x_axis_label = "Time"
y_axis_min_value = 0.0
y_axis_max_value = 100.0
y_axis_grad_number = 7
y_axis_label = "Data"
grid_horizontal_visible = true
grid_vertical_visible = false

[node name="logo" type="TextureRect" parent="Control/WindowDialog"]
margin_left = 5.0
margin_top = -44.0
margin_right = 45.0
margin_bottom = -4.0
texture = ExtResource( 5 )
expand = true

[node name="update" type="Button" parent="Control/WindowDialog"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -49.0
margin_bottom = -13.0
text = "Update"

[node name="ZoomController" type="Control" parent="Control/WindowDialog"]
visible = false
anchor_right = 0.0714286
anchor_bottom = 0.773196
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ZOOMP" type="Button" parent="Control/WindowDialog/ZoomController"]
anchor_left = 0.0666667
anchor_top = 0.00333333
anchor_right = 0.933333
anchor_bottom = 0.217148
text = "↑"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ZOOMP2" type="Button" parent="Control/WindowDialog/ZoomController"]
anchor_left = 0.0666666
anchor_top = 0.236667
anchor_right = 0.933333
anchor_bottom = 0.416667
text = "+"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ZOOMN" type="Button" parent="Control/WindowDialog/ZoomController"]
anchor_left = 0.0666667
anchor_top = 0.776667
anchor_right = 0.933333
anchor_bottom = 0.990481
text = "↓"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ZOOMN2" type="Button" parent="Control/WindowDialog/ZoomController"]
anchor_left = 0.0666666
anchor_top = 0.586667
anchor_right = 0.933333
anchor_bottom = 0.766667
text = "-"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="rst" type="Button" parent="Control/WindowDialog/ZoomController"]
anchor_left = 0.0666666
anchor_top = 0.43
anchor_right = 0.933333
anchor_bottom = 0.573333
text = "↩"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="err" type="AcceptDialog" parent="Control"]
margin_left = 469.0
margin_top = 79.0
margin_right = 882.0
margin_bottom = 231.0
window_title = "Error"
resizable = true

[node name="RichTextLabel" type="RichTextLabel" parent="Control/err"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -52.0

[connection signal="request_completed" from="HTTPRequest" to="HTTPRequest" method="_on_HTTPRequest_request_completed"]
[connection signal="popup_hide" from="Control/WindowDialog" to="." method="_on_WindowDialog_popup_hide"]
[connection signal="pressed" from="Control/WindowDialog/update" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/WindowDialog/ZoomController/ZOOMP" to="." method="_on_ZOOMP_pressed"]
[connection signal="pressed" from="Control/WindowDialog/ZoomController/ZOOMP2" to="." method="_on_ZOOMP2_pressed"]
[connection signal="pressed" from="Control/WindowDialog/ZoomController/ZOOMN" to="." method="_on_ZOOMN_pressed"]
[connection signal="pressed" from="Control/WindowDialog/ZoomController/ZOOMN2" to="." method="_on_ZOOMN2_pressed"]
[connection signal="pressed" from="Control/WindowDialog/ZoomController/rst" to="." method="_on_rst_pressed"]
